update swagger to OpenApi3 / use bearer in authorization token / use authCheck middleware in specifique router
