# src/swagger.yaml
@@ -1,116 +1,138 @@
-swagger: "2.0"
+openapi: 3.0.0
 info:
-    description: "Manage your FFTCG collection"
-    version: "0.1.0"
-    title: "FFTCG collection"
-tags:
-    - name: "login"
-    - name: "user"
+    description: Manage your FFTCG collection
+    version: 0.1.0
+    title: FFTCG collection
+servers:
+    - url: http://localhost:3000/api/v1
+      description: local server
 paths:
-    /api/v1/login/google:
+    /login/google:
         post:
-            tags:
-                - "login"
-            summary: "login with google"
-            description: "description"
-            operationId: "loginGoogle"
-            consumes: "application/json"
-            produces: "application/json"
-            parameters:
-                - in: "body"
-                  name: "payload"
-                  required: true
-                  description: "ID of google token"
-                  schema:
-                      $ref: "#/definitions/googlePayload"
+            tags: [login]
+            summary: login with google
+            requestBody:
+                $ref: '#/components/requestBodies/google'
             responses:
-                "200":
-                    description: "login successful"
-                    schema:
-                        $ref: "#/definitions/user"
-
-                "201":
-                    description: "user creation successful"
-                    schema:
-                        $ref: "#/definitions/user"
-                "401":
-                    description: "Invalid token"
-                    schema:
-                        type: object
-                        properties:
-                            message:
-                                type: "string"
-                                exemple: "Token expiration date"
-    /api/v1/users/{userId}:
+                200:
+                    $ref: '#/components/responses/user'
+                201:
+                    $ref: '#/components/responses/user'
+                401:
+                    $ref: '#/components/responses/invalidToken'
+    /users/{userId}:
         get:
-            tags:
-                - "user"
-            summary: "Find user by ID"
-            description: "Returns a single user"
-            operationId: "getUserById"
-            consumes: "application/json"
-            produces: "application/json"
+            tags: [user]
+            summary: Find user by ID
             parameters:
-                - name: "userId"
-                  in: "path"
-                  description: "ID of user to return"
-                  exemple: 1
+                - name: userId
+                  in: path
+                  description: ID of user to return
+                  example: 8987518b-f2bb-45e1-bbf7-4e6a35803149
                   required: true
-                  type: "integer"
+                  schema:
+                    type: string
+                    format: uuid
+                - $ref: '#/components/parameters/authorization'
             responses:
-                "200":
-                    description: "successful operation"
+                200:
+                    $ref: '#/components/responses/user'
+                404:
+                    $ref: '#/components/responses/notFound'
+                400:
+                    $ref: '#/components/responses/badRequest'
+                401:
+                    $ref: '#/components/responses/invalidToken'
+components:
+    schemas:
+        user:
+            properties:
+                id:
+                    type: string
+                    format: uuid
+                firstName:
+                    type: string
+                lastName:
+                    type: string
+                email:
+                    type: string
+                    format: email
+                locale:
+                    type: string
+                userName:
+                    type: string
+                authenticationType:
+                    type: string
+                createdAt:
+                    type: string
+                    format: date-time
+                updatedAt:
+                    type: string
+                    format: date-time
+            example:
+                id: 8987518b-f2bb-45e1-bbf7-4e6a35803149
+                firstName: firstName1
+                lastName: lastName1
+                email: email1@gmail.com
+                locale: fr
+                userName: userName1
+                authenticationType: google
+                createdAt: 2020-08-20 23:04:53.935692
+                updatedAt: 2020-08-20 23:04:53.935692
+        idToken:
+            properties:
+                idtoken:
+                    required: true
+                    type: string
+                    example: eyJhbGciOiJSUz...yLe9LNM85DA
+                    description: Google token ID
+        error:
+            properties:
+                message:
+                    type: string
+                    example:
+                        - Token expiration date
+                        - User not found
+    requestBodies:
+        google:
+            description: id token from goog oauth
+            required: true
+            content:
+                application/json:
+                    example: eyJhbGciOiJSUz...yLe9LNM85DA
                     schema:
-                        $ref: '#/definitions/user'
-                "404":
-                    description: "User not found"
+                        $ref: '#/components/schemas/idToken'
+    responses:
+        user:
+            description: ok
+            content:
+                application/json:
                     schema:
-                        type: object
-                        properties:
-                            message:
-                                type: "string"
-                                exemple: "user not found"
-definitions:
-    user:
-        type: "object"
-        properties:
-            id:
-                type: "integer"
-                exemple: "1"
-            firstName:
-                type: "string"
-                exemple: "Bersiroth"
-            lastName:
-                type: "string"
-                exemple: "Masamune"
-            email:
-                type: "string"
-                exemple: "Bersiroth@masamune.fr"
-            locale:
-                type: "string"
-                exemple: "fr"
-            userName:
-                type: "string"
-                exemple: "userName"
-            authenticationType:
-                type: "string"
-                exemple: "google"
-            createdAt:
-                type: "string"
-                description: "format timestamp"
-                format: date-time
-                exemple: "2020-08-18T22:30:22.650Z"
-            UpdatedAt:
-                type: "string"
-                description: "format timestamp"
-                format: date-time
-                exemple: "2020-08-18T22:30:22.650Z"
-
-    googlePayload:
-        type: "object"
-        properties:
-            idtoken:
+                        $ref: '#/components/schemas/user'
+        invalidToken:
+            description: invalid token
+            content:
+                application/json:
+                    schema:
+                        $ref: '#/components/schemas/error'
+        notFound:
+            description: entity not found
+            content:
+                application/json:
+                    schema:
+                        $ref: '#/components/schemas/error'
+        badRequest:
+            description: bad request
+            content:
+                application/json:
+                    schema:
+                        $ref: '#/components/schemas/error'
+    parameters:
+        authorization:
+            in: header
+            name: authorization
+            schema:
+                type: string
+                format: bearer
                 required: true
-                type: "string"
-                example: "eyJhbGciOiJSUz...yLe9LNM85DA"
-                description: "Google token ID"
+                example: bearer eyJhbGciOiJSUz...yLe9LNM85DA
